<resources>
    <string name="app_name">Weather!</string>
    <string name="registration_title">Registration</string>
    <string name="username">User name:</string>
    <string name="password">Password:</string>
    <string name="password2">Confirm password:</string>
    <string name="login_button">Login</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_country_popup">Edit country name</string>
    <string name="edit_degrees_popup">Edit degrees</string>
    <string name="save">Save</string>
    <string name="registration_button">Registration</string>

    <string name="loginButtonClicked">Prisijungimo vardas: </string>

    <string name="ErrorMessageUsernameField">Error! You enter wrong username!</string>
    <string name="ErrorMessagePasswordField">Error! You enter wrong password!</string>

    <string name="username_hint">Enter username. Only letters</string>
    <string name="password_hint">Enter password!</string>
</resources>